[project]
authors = [
  {name = "Patryk Orzechowski", email = "patryk@upenn.edu"},
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3.10",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Topic :: Software Development",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "osparc~=0.5.0",
  "pennsieve2 >= 0.1.2",
]
description = "NIH SPARC Python Client"
description = "NIH SPARC Python Client"
keywords = ["data science", "datasets"]
keywords = ["data science", "datasets"]
license = {file = "LICENSE"}
license = {file = "LICENSE"}
maintainers = [
  {name = "Patryk Orzechowski", email = "patryk@upenn.edu"},
]
name = "sparc.client"
name = "sparc.client"
readme = "README.md"
readme = "README.md"
requires-python = ">=3.10"
requires-python = ">=3.10"
version = "0.1.0"
version = "0.0.1.post1"

[project.optional-dependencies]
test = [
  "pytest ~= 7.2",
  "pytest-cov",
  "pytest-mock",
  "flake8",
  "black",
  "responses",
]

[project.urls]
changelog = "https://github.com/nih-sparc/sparc.client/CHANGELOG.md"
documentation = "https://github.com/nih-sparc/sparc.client/README.md"
homepage = "https://sparc.science"
repository = "https://github.com/nih-sparc/sparc.client"

[tool.black]
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | docs
)/
'''
line-length = 99
target-version = ['py310']

[tool.setuptools.packages.find]
where = ["src", "config"]

[tool.setuptools.package-data]
"*" = ["*.ini", "*.txt"]

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "pennsieve2"]

[tool.pytest.ini_options]
addopts = "-ra -q"
pythonpath = [
  ".",
  "src",
]
testpaths = [
  "tests",
]
